# ChepkunovAA_1C_exam

./: CMakeLists.txt  README.md  main.cpp  run.sh
includes/: Abstract.hpp  Interface.hpp  Predictor.hpp
sourse/: Abstract.cpp  Interface.cpp  Predictor.cpp
